<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/green">

        <!--        <androidx.cardview.widget.CardView-->
        <!--            android:layout_width="50dp"-->
        <!--            android:layout_height="50dp"-->
        <!--            android:id="@+id/imageView"-->
        <!--            android:background="@color/green"-->
        <!--            android:layout_marginTop="6dp"-->
        <!--            android:layout_marginStart="16dp"-->
        <!--            android:layout_alignParentTop="true"-->
        <!--            android:layout_alignParentStart="true"-->
        <!--            app:cardCornerRadius="60dp">-->

        <!--            <ImageView-->
        <!--                android:layout_width="50dp"-->
        <!--                android:layout_height="50dp"-->
        <!--                android:id="@+id/icon"-->
        <!--                android:background="@drawable/shape_circle"/>-->

        <!--        </androidx.cardview.widget.CardView>-->

        <TextView
            android:id="@+id/type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter"
            android:text="type of establishment"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold"
            android:layout_marginTop="14dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/establishmentName"
            android:fontFamily="@font/inter"
            android:textStyle="bold"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:textAllCaps="true"
            android:text="Establishment name"
            android:layout_marginTop="34dp"
            android:layout_marginStart="20dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rl"
            android:layout_marginTop="60dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter"
                android:text="Address"
                android:textColor="@color/white"
                android:textSize="11sp"/>

            <TextView
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:fontFamily="@font/inter"
                android:text="@string/address"
                android:textSize="12sp"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="54dp"
                android:fontFamily="@font/inter"
                android:text="Operating Hours"
                android:textColor="@color/white"
                android:textSize="11sp" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="66dp">

                <TextView
                    android:id="@+id/days"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter"
                    android:text="@string/daysEg"
                    android:textSize="12sp"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_marginEnd="2dp"
                    android:layout_toEndOf="@id/days"
                    android:fontFamily="@font/inter"
                    android:text=":"
                    android:textSize="12sp"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/hours"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_toEndOf="@id/textView3"
                    android:fontFamily="@font/inter"
                    android:text="@string/hoursEg"
                    android:textSize="12sp"
                    android:textColor="@color/black"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true">

                <TextView
                    android:id="@+id/days2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter"
                    android:text="@string/daysEg2"
                    android:textSize="12sp"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_marginEnd="2dp"
                    android:layout_toEndOf="@id/days2"
                    android:fontFamily="@font/inter"
                    android:text=":"
                    android:textSize="12sp"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/hours2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_toEndOf="@id/textView4"
                    android:fontFamily="@font/inter"
                    android:text="@string/hoursEg2"
                    android:textSize="12sp"
                    android:textColor="@color/black"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tag1"
                    android:text="Covid-19"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:padding="4dp"
                    android:fontFamily="@font/inter"
                    android:background="@drawable/shape_rectangle"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tag2"
                    android:layout_marginStart="4dp"
                    android:layout_toEndOf="@id/tag1"
                    android:text="General Practitioner"
                    android:textSize="12sp"
                    android:textColor="@color/black"
                    android:padding="4dp"
                    android:fontFamily="@font/inter"
                    android:background="@drawable/shape_rectangle"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tag3"
                    android:layout_marginStart="4dp"
                    android:layout_toEndOf="@id/tag2"
                    android:text="Derma Darah"
                    android:textSize="12sp"
                    android:textColor="@color/black"
                    android:padding="4dp"
                    android:fontFamily="@font/inter"
                    android:background="@drawable/shape_rectangle"/>

            </RelativeLayout>

        </RelativeLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:id="@+id/bar"
            android:layout_below="@+id/rl"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/bar"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/deleteBtn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_below="@id/bar"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/ic_baseline_delete_24"
            android:backgroundTint="@color/darkGreen" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/editBtn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_below="@id/bar"
            android:layout_toStartOf="@+id/deleteBtn"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/ic_baseline_edit_24"
            android:backgroundTint="@color/darkGreen" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="@color/white"
            android:layout_below="@+id/editBtn"/>


    </RelativeLayout>

</RelativeLayout>